Logger Pipeline Step added to Sitecore.DataExchange.Examples.Sitecore package.
It logs values of Source/Target object to Pipeline batch log file.
Values are defined with the list of Value Accessors.

--- a/Sitecore.DataExchange.Examples.Sitecore/Sitecore.DataExchange.Examples.Sitecore.csproj
+++ b/Sitecore.DataExchange.Examples.Sitecore/Sitecore.DataExchange.Examples.Sitecore.csproj
@@ -54,6 +54,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoggerPipelineStep\LoggerPipelineStepConverter.cs" />
+    <Compile Include="LoggerPipelineStep\LoggerSettings.cs" />
+    <Compile Include="LoggerPipelineStep\LoggerStepProcessor.cs" />
     <Compile Include="SelfieLogger\SelfieLoggerPipelineStepConverter.cs" />
     <Compile Include="SelfieLogger\SelfieLoggerSettings.cs" />
     <Compile Include="SelfieLogger\SelfieLoggerStepProcessor.cs" />
