ashx file removed from project

--- a/Sitecore.DataExchange.Examples.WebHandlers/Sitecore.DataExchange.Examples.WebHandlers.csproj
+++ b/Sitecore.DataExchange.Examples.WebHandlers/Sitecore.DataExchange.Examples.WebHandlers.csproj
@@ -40,9 +40,6 @@
     <None Include="App_Config\Sitecore\Sitecore.DataExchange.Examples.WebHandlers.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="pipelinebatchhandler.ashx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RunPipelineBatchHandler.cs" />
@@ -83,6 +80,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Web" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="README.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
